--- a/michael/static/css/style.css
+++ b/michael/static/css/style.css
@@ -1,2 +1,31 @@
 .form-inline {
 	margin: 20px 50px 0px 100px;
+}
+#topImg {
+	height: 80px;
+	width: 100px;
+	float: left;
+	padding: 3px;
+}
+h1 {
+	text-align: center;
+	font-size: 60px;
+	font-weight: bold;
+	font-family: "Times New Roman", Georgia, Serif;
+	text-shadow: 3px 3px #9e9e9e;
+}
+#slider {
+	margin-right: 35%;
+	margin-left: 2%;
+}
+p {
+	color: yellow;
+	text-shadow: 2px 2px black;
+	font-size: 1px;
+}
+#content{
+	font-size: 2px
+}
+#release{
+	float:right;
+}
