--- a/michael/static/css/style.css
+++ b/michael/static/css/style.css
@@ -15,12 +15,17 @@ h1 {
 	text-shadow: 3px 3px #9e9e9e;
 }
 #slider {
-	margin-right: 35%;
-	margin-left: 2%;
+	width: 1000px;
+
+}
+#slider2 {
+	width: 400px;
+	padding: 10px;
+	margin-left: 300px;
 }
 p {
-	color: yellow;
-	text-shadow: 2px 2px black;
+	color: black;
+	text-shadow: 2px 2px grey;
 	font-size: 1px;
 }
 #content{
@@ -28,4 +33,26 @@ p {
 }
 #release{
 	float:right;
+}
+.scroller {
+    width: 600px;
+    height: 600px;
+    overflow: scroll;
+}
+p {
+	font-size: 20px;
+}
+.mygrid-wrapper-div {
+    overflow: scroll;
+    height: 270px;
+   width: 400px;
+   margin-left: 300px;
+}
+h2{
+	margin-left: 300px;
+	font-size: 35px;
+	font-weight: bold;
+	font-family: "Times New Roman", Georgia, Serif;
+	text-shadow: 3px 3px #9e9e9e;
+
 }
