--- a/michael/static/css/style.css
+++ b/michael/static/css/style.css
@@ -21,11 +21,11 @@ h1 {
 #slider2 {
 	width: 400px;
 	padding: 10px;
-	margin-left: 300px;
+/*	margin-left: 300px;*/
 }
 p {
 	color: black;
-	text-shadow: 2px 2px grey;
+	font-family: "Times New Roman", Georgia, Serif;
 	font-size: 1px;
 }
 #content{
@@ -46,10 +46,10 @@ p {
     overflow: scroll;
     height: 270px;
    width: 400px;
-   margin-left: 300px;
-}
+/*   margin-left: 300px;
+*/}
 h2{
-	margin-left: 300px;
+/*	margin-left: 300px;*/
 	font-size: 35px;
 	font-weight: bold;
 	font-family: "Times New Roman", Georgia, Serif;
